--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -26,7 +26,10 @@ nav ul li{
    }
 
 /* header */
-header{
+header .navbar {
+    background-color: #dc3545;
+    padding: 1rem;
+
 
 }
 
@@ -39,6 +42,9 @@ body .parrafo{
 
 }
 /*imagenes*/
+header .navbar .logo a img {
+    width: 100%;
+}
 body header .imagenes img{
     width: 25%;
     height: 10%;
@@ -72,12 +78,13 @@ body main .productos{
 
 /*body*/
 body{
-    background-color:#efedeb;
+    background-color:#dc3545;
     text-align: center;
+    justify-content: center;
     font-family: "Merriweather", serif;  
 }
 .footer{
-    text-align: center;
+    text-align: center bottom;
     padding: 1rem;
     margin: auto;
     border: auto;
@@ -89,9 +96,47 @@ body #imagenes{
     margin: 1rem;
 
 }
+h2{
+    text-align: center;
+}
+.carousel-item img {
+    width: 75%;
+    height: auto;
+    margin: 0 auto;
+    
+}
+.carousel-inner {
+    padding: 1rem;
+}
 
+/* media query desktop*/
 
-/* mq desktop*/
-@media screen {min-width: 1024px;
-          
+@media (min-width: 1024px) {
+    header .navbar .logo a img{
+        width: 20%;
+        height: auto;
+        
+    }
+    header .navbar {
+        background-color: #dc3545;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 1rem;
+        }
+        
+        body {
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
+    body #carouselExampleAutoplaying {
+        margin: 0 auto;
+        display: block;
+        width: 80%;
+        }
+    footer {
+        text-align: center;
+    }
+
 }
