--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -1,142 +1,407 @@
-/*barra de navegacion*/
-nav{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
-    padding: 1rem;
-}
-header nav ul li a{
-    text-decoration: none;
-    color: rgb(208, 9, 42);
-    border-top: 1rem;
-    border-left: ;
-}
-ul{
-    list-style-type: none;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center
+@charset "UTF-8";
+/*  Base / Layout */
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-nav ul li{
-    text-decoration: none;
-    text-align: center;
-    margin-right: 50px;
-   }
+/* Tamaño de imagen */
+/* Border radius */
+/* variables */
+/* body */
+body {
+  background-color: white;
+  text-align: center;
+  justify-content: center;
+  font-family: "Merriweather", serif;
+}
+
+h2 {
+  text-align: center;
+}
+
+.parrafo {
+  background-color: pink;
+  margin: 1rem;
+  padding: 1rem;
+}
 
 /* header */
+header {
+  align-items: center;
+  padding-left: 1rem;
+}
 header .navbar {
-    background-color: #dc3545;
-    padding: 1rem;
-
-
+  background-color: #dc3545;
+  padding: 1rem;
+  align-items: center;
 }
-
-body .parrafo{
-    background-color: pink
-
-    margin: 1rem;
-    padding: 1rem;
-
-
+header .navbar .logo {
+  align-items: center;
+  justify-content: center;
 }
-/*imagenes*/
+header .navbar .logo a {
+  height: 10%;
+}
 header .navbar .logo a img {
-    width: 100%;
-}
-body header .imagenes img{
-    width: 25%;
-    height: 10%;
-   }
-
-   body header .imagenes{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   }
-
-.main1 img {
-    width: 100px;
-    height: 100px;
-}
- body main .productos .imagen{
-    width: 10%;
-    height: auto;
-    margin: 1rem;
-    padding: 1rem;
-    border-radius: 15%;
-}
-body main .productos{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    object-fit: cover;
-    
+  width: 80%;
 }
 
-/*body*/
-body{
-    background-color:#dc3545;
-    text-align: center;
-    justify-content: center;
-    font-family: "Merriweather", serif;  
+/* carousel */
+.carousel-inner {
+  background-color: pink;
+  padding: 1rem;
 }
-.footer{
-    text-align: center bottom;
-    padding: 1rem;
-    margin: auto;
-    border: auto;
-}
-body #imagenes{
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    margin: 1rem;
 
-}
-h2{
-    text-align: center;
+.carousel-item {
+  width: 80%;
+  align-items: center;
 }
 .carousel-item img {
-    width: 75%;
-    height: auto;
-    margin: 0 auto;
-    
-}
-.carousel-inner {
-    padding: 1rem;
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
+  padding-left: 3rem;
 }
 
-/* media query desktop*/
+/* footer */
+.footer {
+  background-color: #dc3545;
+  padding: 1rem;
+  margin: auto;
+}
 
+/* media  queris */
 @media (min-width: 1024px) {
-    header .navbar .logo a img{
-        width: 20%;
-        height: auto;
-        
-    }
-    header .navbar {
-        background-color: #dc3545;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 1rem;
-        }
-        
-        body {
-            text-align: center;
-            align-items: center;
-            justify-content: center;
-        }
-    body #carouselExampleAutoplaying {
-        margin: 0 auto;
-        display: block;
-        width: 80%;
-        }
-    footer {
-        text-align: center;
-    }
-
+  header .navbar {
+    background-color: #dc3545;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    padding: 1rem;
+    gap: 10rem;
+  }
+  header .navbar .logo a img {
+    width: 20%;
+    height: auto;
+  }
+  #carouselExampleAutoplaying {
+    margin: 0 auto;
+    display: block;
+    width: 80%;
+  }
+  footer {
+    text-align: center;
+  }
 }
+@media (min-width: 768px) and (max-width: 1023px) {
+  header .navbar {
+    background-color: #dc3545;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    padding: 1rem;
+    gap: 10rem;
+  }
+  header .navbar .logo a img {
+    width: 20%;
+    height: auto;
+  }
+  #carouselExampleAutoplaying {
+    margin: 0 auto;
+    display: block;
+    width: 80%;
+  }
+  footer {
+    text-align: center;
+  }
+}
+body {
+  background-color: white;
+  text-align: center;
+  justify-content: center;
+  font-family: "Merriweather", serif;
+}
+
+/* Header y Navbar */
+header {
+  align-items: center;
+  padding-left: 1rem;
+}
+header .navbar {
+  background-color: #dc3545;
+  padding: 1rem;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 10rem;
+}
+header .navbar ul li a {
+  text-decoration: none;
+  color: rgb(208, 9, 42);
+}
+header .navbar .logo {
+  width: 15%;
+  align-items: center;
+  justify-content: center;
+}
+header .navbar .logo a {
+  align-items: center;
+  height: 10%;
+}
+header .navbar .logo a img {
+  width: 15%;
+  height: auto;
+}
+
+/* Footer */
+.footer {
+  background-color: #dc3545;
+  text-align: center;
+  padding: 1rem;
+}
+
+/* Contacto */
+.main1 {
+  align-items: center;
+}
+.main1 img {
+  width: 100px;
+  height: 100px;
+}
+.main1 section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.5rem;
+  gap: 2rem;
+}
+.main1 section iframe {
+  width: 100%;
+  height: auto;
+  text-align: center;
+}
+.main1 section .logotipo img {
+  width: 50px;
+  height: auto;
+  border-radius: 100px;
+}
+.main1 section form {
+  background-color: pink;
+  text-align: center;
+  justify-content: center;
+}
+.main1 section form input,
+.main1 section form select,
+.main1 section form textarea {
+  width: 100%;
+  margin-bottom: 1em;
+}
+.main1 section form button {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5em 1em;
+  border: none;
+}
+
+/* Productos / Carousel */
+.contenedor {
+  justify-content: center;
+}
+.contenedor .productos {
+  background-color: pink;
+  border: 1px solid black;
+  margin: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.contenedor .productos a img {
+  width: 100%;
+  height: auto;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 15%;
+}
+.contenedor .productos .parrafo {
+  display: flex;
+  flex-direction: column;
+  font-size: x-large;
+  font-family: "Merriweather", serif;
+  text-decoration: none;
+  list-style: none;
+}
+.contenedor .productos .parrafo span {
+  text-decoration-line: line-through;
+}
+.contenedor .productos .producto {
+  margin: 1rem;
+}
+
+.carousel-item {
+  width: 80%;
+  align-items: center;
+}
+.carousel-item img {
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
+  padding-left: 3rem;
+}
+
+.carousel-inner {
+  background-color: pink;
+  padding: 1rem;
+}
+
+/* Media Queries */
+@media (min-width: 1024px) {
+  header .navbar .logo a img {
+    width: 20%;
+    height: auto;
+  }
+  body {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor .productos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
+  .contenedor .productos .producto img {
+    width: 100%;
+    height: 100%;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  header .navbar .logo a img {
+    width: 20%;
+    height: auto;
+  }
+  body {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .contenedor .productos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
+  .contenedor .productos .producto img {
+    width: 100%;
+    height: 100%;
+  }
+}
+body {
+  font-family: "Merriweather", serif;
+  background-color: white;
+  text-align: center;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+header .logo a img {
+  width: 80px;
+  height: auto;
+}
+
+/* Footer */
+.footer {
+  background-color: #dc3545;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+/* Sidebar / Offcanvas */
+.offcanvas-body ul.nav {
+  list-style: none;
+  padding: 0;
+}
+.offcanvas-body ul.nav li {
+  margin-bottom: 0.5rem;
+}
+.offcanvas-body ul.nav li a.nav-link {
+  text-decoration: none;
+  color: black;
+}
+
+/* Botones Filtrar / Buscar*/
+.btn {
+  --bs-btn-padding-y: 0.25rem;
+  --bs-btn-padding-x: 0.5rem;
+  --bs-btn-font-size: 0.75rem;
+}
+
+/* Contenedor */
+.contenedor {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contenedor main.productos {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.contenedor main.productos .producto {
+  background-color: pink;
+  padding: 1rem;
+  border-radius: 15px;
+  width: 200px; /* ancho fijo para cada producto */
+}
+.contenedor main.productos .producto a img {
+  width: 100%;
+  height: auto;
+  height: auto;
+  border-radius: 10px;
+}
+.contenedor main.productos .producto .parrafo {
+  text-align: center;
+  font-size: 1rem;
+}
+.contenedor main.productos .producto .parrafo p {
+  margin: 0.25rem 0;
+}
+.contenedor main.productos .producto .parrafo p span {
+  text-decoration-line: line-through;
+  color: gray;
+}
+
+/* media queries */
+@media (min-width: 768px) {
+  header .logo a img {
+    width: 120px;
+    height: auto;
+  }
+  .contenedor main.productos {
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1024px) {
+  header .logo a img {
+    width: 150px;
+    height: auto;
+  }
+  .contenedor main.productos {
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
